--- a/requirements.txt
+++ b/requirements.txt
@@ -14,11 +14,13 @@ certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.12
 click==8.0.4
+cloudpickle==2.0.0
 colorama==0.4.4
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
 defusedxml==0.7.1
+dm-tree==0.1.7
 entrypoints==0.4
 executing==0.8.2
 flatbuffers==2.0
@@ -81,6 +83,7 @@ pure-eval==0.2.2
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
+pydot==1.4.2
 Pygments==2.11.2
 pyparsing==3.0.7
 pyrsistent==0.18.1
@@ -101,12 +104,14 @@ Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
 stack-data==0.2.0
+tdqm==0.0.1
 tensorboard==2.8.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow==2.8.0
 tensorflow-addons==0.16.1
 tensorflow-io-gcs-filesystem==0.24.0
+tensorflow-probability==0.16.0
 termcolor==1.1.0
 terminado==0.13.1
 testpath==0.6.0
@@ -115,6 +120,7 @@ threadpoolctl==3.1.0
 tifffile==2022.2.9
 tomli==2.0.1
 tornado==6.1
+tqdm==4.63.0
 traitlets==5.1.1
 typeguard==2.13.3
 typing_extensions==4.1.1
