--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,10 @@ astunparse==1.6.3
 attrs==21.4.0
 Babel==2.9.1
 backcall==0.2.0
+beautifulsoup4==4.11.1
 black==22.1.0
 bleach==4.1.0
+bs4==0.0.1
 cachetools==5.0.0
 certifi==2021.10.8
 cffi==1.15.0
@@ -16,6 +18,7 @@ charset-normalizer==2.0.12
 click==8.0.4
 cloudpickle==2.0.0
 colorama==0.4.4
+commonmark==0.9.1
 cycler==0.11.0
 debugpy==1.5.1
 decorator==5.1.1
@@ -23,9 +26,9 @@ defusedxml==0.7.1
 dm-tree==0.1.7
 entrypoints==0.4
 executing==0.8.2
-flatbuffers==2.0
+flatbuffers==1.12
 fonttools==4.29.1
-gast==0.5.3
+gast==0.4.0
 google-auth==2.6.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
@@ -48,7 +51,7 @@ jupyter-server==1.13.5
 jupyterlab==3.2.9
 jupyterlab-pygments==0.1.2
 jupyterlab-server==2.10.3
-keras==2.8.0
+keras==2.9.0
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.2
 libclang==13.0.0
@@ -75,6 +78,7 @@ parso==0.8.3
 pathspec==0.9.0
 pickleshare==0.7.5
 Pillow==9.0.1
+pip-search==0.0.11
 platformdirs==2.5.1
 prometheus-client==0.13.1
 prompt-toolkit==3.0.28
@@ -95,6 +99,7 @@ pywinpty==1.1.6
 pyzmq==22.3.0
 requests==2.27.1
 requests-oauthlib==1.3.1
+rich==12.2.0
 rsa==4.8
 scikit-image==0.19.2
 scikit-learn==1.0.2
@@ -103,13 +108,15 @@ seaborn==0.11.2
 Send2Trash==1.8.0
 six==1.16.0
 sniffio==1.2.0
+soupsieve==2.3.2.post1
 stack-data==0.2.0
 tdqm==0.0.1
-tensorboard==2.8.0
+tensorboard==2.9.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
-tensorflow==2.8.0
+tensorflow==2.9.0
 tensorflow-addons==0.16.1
+tensorflow-estimator==2.9.0
 tensorflow-io-gcs-filesystem==0.24.0
 tensorflow-probability==0.16.0
 termcolor==1.1.0
